solved the positioning/showing of radios in home - was generating horizontal scroll

--- a/app/modules/common/form.scss
+++ b/app/modules/common/form.scss
@@ -81,6 +81,7 @@ form.lines {
   }
 
   input[type=radio] {
+    display:none;
     position: absolute;
     z-index: -1;
   }
